# personal-site

./: .dockerignore  .gitignore  Dockerfile  Pipfile  docker-compose.yml  fly.toml  pyproject.toml  tailwind.config.js  watchcss.sh
.devcontainer/: devcontainer.json
.docker/production/: docker-compose.yml
.docker/volumes/: .bash_aliases
blog/: models.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_index_page.html  blog_post.html
config/: settings.py  urls.py
config/settings/: base.py  collectstatic.py  dev.py  local.py  prod.py  production.py
config/templates/: base.html  navbar.html
home/: models.py
home/migrations/: 0001_initial.py  0003_homepage_body.py
home/static/css/: index.css
home/templates/home/: home_page.html
navigation/templatetags/: navigation_tags.py
portfolio/: models.py
portfolio/migrations/: 0001_initial.py  0002_project.py  0002_projectpage.py  0002_projectpage_technologytag_projectpage_technologies.py  0003_projectindexpage.py  0003_projectpagetag_projectpage_tags.py  0004_projectpage_short_description.py
portfolio/templates/portfolio/: portfolio_index_page.html  project.html
projects/: models.py
projects/migrations/: 0001_initial.py  0002_projecttag_project_tags.py
projects/templates/projects/: project.html  (+1 more)
templates/: base.html  navigation.html
templates/components/: project_card.html  tag.html
templates/home/: home_page.html
templates/navigation/: nav_bar.html
templates/portfolio/: home_page.html  portfolio_index_page.html  project_index_page.html  project_page.html
(+1 files in other folders)
