[tool.poetry]
name = "personal-site"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "personal_site"}]

[tool.poetry.dependencies]
python = "^3.11"
wagtail = "^5.0.2"
dj-database-url = "^2.0.0"
psycopg2 = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
