[tool.poetry]
name = "personal-site"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "personal_site"}]

[tool.poetry.dependencies]
python = "^3.11"
wagtail = "^5.0.2"
gunicorn = "^21.2.0"
whitenoise = "^6.5.0"
psycopg2 = "^2.9.7"
dj-database-url = "^2.0.0"


[tool.poetry.group.dev.dependencies]
django-livereload-server = "^0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
